<?xml version="1.0" encoding="utf-8"?><!--
The layout for the review creation form

Created by Hristo Klechorov
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="date"
                  type="String"/>
        <variable name="time"
                  type="String"/>
        <variable name="vm"
                  type="edu.kit.pse.a1sicht.ui.employee.ReviewScreenViewModel"/>
    </data>
    <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D7E6E2">

        <!-- Header -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/HeaderLayout"
                android:elevation="4dp" android:id="@+id/header">

            <TextView
                    android:text="@string/reviewCreationHeader"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:layout_toStartOf="@+id/settingsButton"
                    android:layout_marginEnd="41dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"/>

            <ImageButton
                    android:layout_width="51dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/avatar_stock"
                    android:id="@+id/settingsButton"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="1dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="end"
                    android:background="@null"/>

        </RelativeLayout>

        <!-- Content -->
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/header"
                android:fillViewport="true" >

            <RelativeLayout android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:paddingBottom="60dp">
                <TextView
                        android:id="@+id/name"
                        android:text="@string/reviewName"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        style="@style/CustomTextView"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_alignParentTop="true"/>

                <EditText android:id="@+id/nameET"
                          android:text="@{vm.reviewName}"
                    android:hint="@string/review_s_name"
                          android:layout_width="300dp"
                          android:layout_height="40dp"
                          android:maxLength="50"
                          style="@style/CustomEditText"
                          android:layout_alignParentEnd="true"
                          android:layout_alignParentTop="true"
                          android:layout_toEndOf="@+id/name"/>

                <TextView
                        android:id="@+id/place"
                        android:text="@string/reviewPlace"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        style="@style/CustomTextView"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_below="@+id/name"/>

                <EditText android:id="@+id/placeET"
                          android:text="@{vm.reviewLocation}"
                    android:hint="@string/review_s_location"
                          android:maxLength="50"
                          android:layout_width="300dp"
                          android:layout_height="40dp"
                          style="@style/CustomEditText"
                          android:layout_alignParentEnd="true"
                          android:layout_below="@+id/nameET"
                          android:layout_toEndOf="@+id/name"/>


                <Button
                        android:id="@+id/pickDateBtn"
                        android:text="@string/reviewDate"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        style="@style/CustomTextView"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:textSize="17sp"
                        android:layout_below="@+id/place"/>

                <TextView android:id="@+id/dateTV"
                          android:text="@{date}"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignBaseline="@+id/pickDateBtn"
                          android:textSize="20sp"
                          android:textAlignment="center"
                          android:textColor="#000000"
                          android:layout_below="@+id/placeET"
                          android:layout_toEndOf="@+id/pickDateBtn"
                          android:layout_marginTop="50dp"
                    android:layout_marginStart="10dp"/>

                <Button android:id="@+id/pickTimeBtn"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        style="@style/CustomTextView"
                        android:textSize="17sp"
                        android:layout_below="@+id/pickDateBtn"
                        android:text="@string/begin"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"/>

                <TextView android:id="@+id/beginET"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@{time}"
                          android:textSize="25sp"
                          android:textColor="#000000"
                          android:textAlignment="center"
                          android:layout_below="@+id/dateTV"
                          android:layout_toEndOf="@+id/pickTimeBtn"
                          android:layout_alignBaseline="@+id/pickTimeBtn" android:layout_marginTop="50dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:id="@+id/timeslotLength"
                          android:text="@string/timeslotLength"
                          android:textStyle="bold"
                          android:layout_width="200dp"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="30dp"
                          android:layout_below="@+id/pickTimeBtn"
                          android:layout_marginStart="30dp"
                          style="@style/CustomTextView"/>

                <!-- Spinner for the drop down menu with timeslot length choices -->
                <Spinner android:id="@+id/timeslotSpinner"
                         android:layout_width="wrap_content"
                         android:layout_height="45dp"
                         android:background="@android:drawable/btn_dropdown"
                         android:layout_marginTop="30dp"
                         android:layout_below="@+id/beginET"
                         android:layout_toEndOf="@+id/timeslotLength"
                         android:layout_marginStart="35dp"
                         android:spinnerMode="dropdown"/>

                <TextView android:id="@+id/timeslotNumber"
                          android:text="@string/timeslotNumber"
                          android:textStyle="bold"
                          android:layout_width="200dp"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="40dp"
                          android:layout_below="@+id/timeslotLength"
                          android:layout_marginStart="30dp"
                          style="@style/CustomTextView"/>

                <EditText android:id="@+id/timeslotNumET"
                          android:text="@{vm.timeSlotNumber}"
                          android:inputType="number"
                          android:maxLength="1"
                          android:layout_width="50dp"
                          android:layout_height="40dp"
                          style="@style/CustomEditText"
                          android:layout_marginTop="25dp"
                          android:layout_below="@+id/timeslotSpinner"
                          android:layout_toEndOf="@+id/timeslotNumber"
                          android:layout_marginStart="50dp"/>

                <TextView android:id="@+id/maxStudentsPerTimeslot"
                          android:text="@string/maxStudentsPerTimeslot"
                          android:textStyle="bold"
                          android:layout_width="200dp"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="40dp"
                          android:layout_below="@+id/timeslotNumber"
                          android:layout_marginStart="30dp"
                          style="@style/CustomTextView"/>

                <EditText android:id="@+id/maxStudentsPerTimeslotET"
                          android:text="@{vm.maxStudentsProTimeSlot}"
                          android:inputType="number"
                          android:maxLength="2"
                          android:layout_width="50dp"
                          android:layout_height="40dp"
                          style="@style/CustomEditText"
                          android:layout_marginTop="35dp"
                          android:layout_below="@+id/timeslotNumET"
                          android:layout_toEndOf="@+id/timeslotNumber"
                          android:layout_marginStart="50dp"/>

                <TextView android:id="@+id/moreInfo"
                          android:text="@string/moreInfo"
                          android:textStyle="bold"
                          android:layout_width="220dp"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="40dp"
                          android:layout_below="@+id/maxStudentsPerTimeslot"
                          android:layout_marginStart="30dp"
                          style="@style/CustomTextView"/>

                <EditText android:id="@+id/moreInfoET"
                          android:text="@{vm.reviewInfo}"
                    android:hint="@string/additional_information_about_the_review"
                          android:maxLength="200"
                          android:layout_width="500dp"
                          android:layout_height="200dp"
                          style="@style/CustomEditText"
                          android:layout_marginTop="1dp"
                          android:layout_below="@+id/moreInfo" android:textAlignment="gravity"/>

                <Button android:background="@drawable/button_shape"
                        android:text="@string/cancel"
                        android:id="@+id/cancel_btn"
                        android:layout_below="@+id/moreInfoET"
                        android:layout_marginTop="40dp"
                        android:layout_toEndOf="@+id/save_btn"
                        android:layout_marginStart="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button android:background="@drawable/button_shape"
                        android:text="@string/save"
                        android:id="@+id/save_btn"
                        android:layout_below="@+id/moreInfoET"
                        android:layout_marginTop="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="65dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>