...
                android:background="@null" android:scaleType="fitCenter"/>

    </RelativeLayout>

    <!-- Content -->
    <Button
            android:id="@+id/btn_create_review"
            android:text="@string/reviewCreationHeader"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape"/>
...
